// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon after children 1`] = `
.c2 {
  position: relative;
  color: #008200;
  background-color: transparent;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 16px;
  width: 16px;
}

.c2::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e928";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.c3:hover .c1 {
  color: #FFFFFF;
}

.c3 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c3 .c1 svg {
  margin-top: 0;
}

.c4:hover .c1 {
  color: #FFFFFF;
}

.c4 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c4 .c1 svg {
  margin-top: 0;
}

.c5:hover .c1 {
  color: #FFFFFF;
}

.c5 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c5 .c1 svg {
  margin-top: 0;
}

.c6:hover .c1 {
  color: #FFFFFF;
}

.c6 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c6 .c1 svg {
  margin-top: 0;
}

.c7:hover .c1 {
  color: #FFFFFF;
}

.c7 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c7 .c1 svg {
  margin-top: 0;
}

.c8:hover .c1 {
  color: #FFFFFF;
}

.c8 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c8 .c1 svg {
  margin-top: 0;
}

.c9:hover .c1 {
  color: #FFFFFF;
}

.c9 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c9 .c1 svg {
  margin-top: 0;
}

.c10:hover .c1 {
  color: #FFFFFF;
}

.c10 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c10 .c1 svg {
  margin-top: 0;
}

.c11:hover .c1 {
  color: #FFFFFF;
}

.c11 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c11 .c1 svg {
  margin-top: 0;
}

.c12:hover .c1 {
  color: #FFFFFF;
}

.c12 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c12 .c1 svg {
  margin-top: 0;
}

.c13:hover .c1 {
  color: #FFFFFF;
}

.c13 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c13 .c1 svg {
  margin-top: 0;
}

.c14:hover .c1 {
  color: #FFFFFF;
}

.c14 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c14 .c1 svg {
  margin-top: 0;
}

.c15:hover .c1 {
  color: #FFFFFF;
}

.c15 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c15 .c1 svg {
  margin-top: 0;
}

.c16:hover .c1 {
  color: #FFFFFF;
}

.c16 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c16 .c1 svg {
  margin-top: 0;
}

.c17:hover .c1 {
  color: #FFFFFF;
}

.c17 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c17 .c1 svg {
  margin-top: 0;
}

.c18:hover .c1 {
  color: #FFFFFF;
}

.c18 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c18 .c1 svg {
  margin-top: 0;
}

.c19:hover .c1 {
  color: #FFFFFF;
}

.c19 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c19 .c1 svg {
  margin-top: 0;
}

.c20:hover .c1 {
  color: #FFFFFF;
}

.c20 .c1 {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 1px;
  height: 16px;
  margin-left: auto;
  margin-right: auto;
}

.c20 .c1 svg {
  margin-top: 0;
}

.c21:hover .c1 {
  color: #FFFFFF;
}

.c21 .c1 {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 1px;
  height: 16px;
  margin-left: auto;
  margin-right: auto;
}

.c21 .c1 svg {
  margin-top: 0;
}

.c22:hover .c1 {
  color: #FFFFFF;
}

.c22 .c1 {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 1px;
  height: 16px;
  margin-left: auto;
  margin-right: auto;
}

.c22 .c1 svg {
  margin-top: 0;
}

.c23:hover .c1 {
  color: #FFFFFF;
}

.c23 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c23 .c1 svg {
  margin-top: 0;
}

.c24:hover .c1 {
  color: #FFFFFF;
}

.c24 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c24 .c1 svg {
  margin-top: 0;
}

.c25:hover .c1 {
  color: #FFFFFF;
}

.c25 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c25 .c1 svg {
  margin-top: 0;
}

.c26:hover .c1 {
  color: #FFFFFF;
}

.c26 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c26 .c1 svg {
  margin-top: 0;
}

.c27:hover .c1 {
  color: #FFFFFF;
}

.c27 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c27 .c1 svg {
  margin-top: 0;
}

.c28:hover .c1 {
  color: #FFFFFF;
}

.c28 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c28 .c1 svg {
  margin-top: 0;
}

.c29:hover .c1 {
  color: #FFFFFF;
}

.c29 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c29 .c1 svg {
  margin-top: 0;
}

.c30:hover .c1 {
  color: #FFFFFF;
}

.c30 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c30 .c1 svg {
  margin-top: 0;
}

.c31:hover .c1 {
  color: #FFFFFF;
}

.c31 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c31 .c1 svg {
  margin-top: 0;
}

.c32:hover .c1 {
  color: #FFFFFF;
}

.c32 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c32 .c1 svg {
  margin-top: 0;
}

.c33:hover .c1 {
  color: #FFFFFF;
}

.c33 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c33 .c1 svg {
  margin-top: 0;
}

.c34:hover .c1 {
  color: #FFFFFF;
}

.c34 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c34 .c1 svg {
  margin-top: 0;
}

.c35:hover .c1 {
  color: #FFFFFF;
}

.c35 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c35 .c1 svg {
  margin-top: 0;
}

.c36:hover .c1 {
  color: #FFFFFF;
}

.c36 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c36 .c1 svg {
  margin-top: 0;
}

.c37:hover .c1 {
  color: #FFFFFF;
}

.c37 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c37 .c1 svg {
  margin-top: 0;
}

.c38:hover .c1 {
  color: #FFFFFF;
}

.c38 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c38 .c1 svg {
  margin-top: 0;
}

.c39:hover .c1 {
  color: #FFFFFF;
}

.c39 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c39 .c1 svg {
  margin-top: 0;
}

.c40:hover .c1 {
  color: #FFFFFF;
}

.c40 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c40 .c1 svg {
  margin-top: 0;
}

.c41:hover .c1 {
  color: #FFFFFF;
}

.c41 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c41 .c1 svg {
  margin-top: 0;
}

.c42:hover .c1 {
  color: #FFFFFF;
}

.c42 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c42 .c1 svg {
  margin-top: 0;
}

.c43:hover .c1 {
  color: #FFFFFF;
}

.c43 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c43 .c1 svg {
  margin-top: 0;
}

.c44:hover .c1 {
  color: #FFFFFF;
}

.c44 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c44 .c1 svg {
  margin-top: 0;
}

.c45:hover .c1 {
  color: #FFFFFF;
}

.c45 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c45 .c1 svg {
  margin-top: 0;
}

.c46:hover .c1 {
  color: #FFFFFF;
}

.c46 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c46 .c1 svg {
  margin-top: 0;
}

.c47:hover .c1 {
  color: #FFFFFF;
}

.c47 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c47 .c1 svg {
  margin-top: 0;
}

.c0 {
  padding-left: 24px;
  padding-right: 24px;
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  border-radius: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  outline-offset: 0;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: #008200;
  color: #008200;
  font-size: 14px;
  min-height: 40px;
}

.c0:focus {
  outline: solid 3px #FFB500;
}

.c0:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c0:hover .c1 {
  color: #FFFFFF;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  margin-bottom: 0px;
  height: 16px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
  data-component="button"
  disabled={false}
  draggable={false}
  role="button"
  size="medium"
  type="button"
>
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
  <span
    className="c1 c2"
    color="#008200"
    data-component="icon"
    data-element="filter"
    disabled={false}
    fontSize="small"
    type="filter"
  />
</button>
`;

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon before children 1`] = `
.c2 {
  position: relative;
  color: #008200;
  background-color: transparent;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 16px;
  width: 16px;
}

.c2::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e928";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.c0 {
  padding-left: 24px;
  padding-right: 24px;
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  border-radius: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  outline-offset: 0;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: #008200;
  color: #008200;
  font-size: 14px;
  min-height: 40px;
}

.c0:focus {
  outline: solid 3px #FFB500;
}

.c0:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c0:hover .c1 {
  color: #FFFFFF;
}

.c0 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c0 .c1 svg {
  margin-top: 0;
}

.c3:hover .c1 {
  color: #FFFFFF;
}

.c3 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c3 .c1 svg {
  margin-top: 0;
}

.c4:hover .c1 {
  color: #FFFFFF;
}

.c4 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c4 .c1 svg {
  margin-top: 0;
}

.c5:hover .c1 {
  color: #FFFFFF;
}

.c5 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c5 .c1 svg {
  margin-top: 0;
}

.c6:hover .c1 {
  color: #FFFFFF;
}

.c6 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c6 .c1 svg {
  margin-top: 0;
}

.c7:hover .c1 {
  color: #FFFFFF;
}

.c7 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c7 .c1 svg {
  margin-top: 0;
}

.c8:hover .c1 {
  color: #FFFFFF;
}

.c8 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c8 .c1 svg {
  margin-top: 0;
}

.c9:hover .c1 {
  color: #FFFFFF;
}

.c9 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c9 .c1 svg {
  margin-top: 0;
}

.c10:hover .c1 {
  color: #FFFFFF;
}

.c10 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c10 .c1 svg {
  margin-top: 0;
}

.c11:hover .c1 {
  color: #FFFFFF;
}

.c11 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c11 .c1 svg {
  margin-top: 0;
}

.c12:hover .c1 {
  color: #FFFFFF;
}

.c12 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c12 .c1 svg {
  margin-top: 0;
}

.c13:hover .c1 {
  color: #FFFFFF;
}

.c13 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c13 .c1 svg {
  margin-top: 0;
}

.c14:hover .c1 {
  color: #FFFFFF;
}

.c14 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c14 .c1 svg {
  margin-top: 0;
}

.c15:hover .c1 {
  color: #FFFFFF;
}

.c15 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c15 .c1 svg {
  margin-top: 0;
}

.c16:hover .c1 {
  color: #FFFFFF;
}

.c16 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c16 .c1 svg {
  margin-top: 0;
}

.c17:hover .c1 {
  color: #FFFFFF;
}

.c17 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c17 .c1 svg {
  margin-top: 0;
}

.c18:hover .c1 {
  color: #FFFFFF;
}

.c18 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c18 .c1 svg {
  margin-top: 0;
}

.c19:hover .c1 {
  color: #FFFFFF;
}

.c19 .c1 {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 1px;
  height: 16px;
  margin-left: auto;
  margin-right: auto;
}

.c19 .c1 svg {
  margin-top: 0;
}

.c20:hover .c1 {
  color: #FFFFFF;
}

.c20 .c1 {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 1px;
  height: 16px;
  margin-left: auto;
  margin-right: auto;
}

.c20 .c1 svg {
  margin-top: 0;
}

.c21:hover .c1 {
  color: #FFFFFF;
}

.c21 .c1 {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 1px;
  height: 16px;
  margin-left: auto;
  margin-right: auto;
}

.c21 .c1 svg {
  margin-top: 0;
}

.c22:hover .c1 {
  color: #FFFFFF;
}

.c22 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c22 .c1 svg {
  margin-top: 0;
}

.c23:hover .c1 {
  color: #FFFFFF;
}

.c23 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c23 .c1 svg {
  margin-top: 0;
}

.c24:hover .c1 {
  color: #FFFFFF;
}

.c24 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c24 .c1 svg {
  margin-top: 0;
}

.c25:hover .c1 {
  color: #FFFFFF;
}

.c25 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c25 .c1 svg {
  margin-top: 0;
}

.c26:hover .c1 {
  color: #FFFFFF;
}

.c26 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c26 .c1 svg {
  margin-top: 0;
}

.c27:hover .c1 {
  color: #FFFFFF;
}

.c27 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c27 .c1 svg {
  margin-top: 0;
}

.c28:hover .c1 {
  color: #FFFFFF;
}

.c28 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c28 .c1 svg {
  margin-top: 0;
}

.c29:hover .c1 {
  color: #FFFFFF;
}

.c29 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c29 .c1 svg {
  margin-top: 0;
}

.c30:hover .c1 {
  color: #FFFFFF;
}

.c30 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c30 .c1 svg {
  margin-top: 0;
}

.c31:hover .c1 {
  color: #FFFFFF;
}

.c31 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c31 .c1 svg {
  margin-top: 0;
}

.c32:hover .c1 {
  color: #FFFFFF;
}

.c32 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c32 .c1 svg {
  margin-top: 0;
}

.c33:hover .c1 {
  color: #FFFFFF;
}

.c33 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c33 .c1 svg {
  margin-top: 0;
}

.c34:hover .c1 {
  color: #FFFFFF;
}

.c34 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c34 .c1 svg {
  margin-top: 0;
}

.c35:hover .c1 {
  color: #FFFFFF;
}

.c35 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c35 .c1 svg {
  margin-top: 0;
}

.c36:hover .c1 {
  color: #FFFFFF;
}

.c36 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c36 .c1 svg {
  margin-top: 0;
}

.c37:hover .c1 {
  color: #FFFFFF;
}

.c37 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c37 .c1 svg {
  margin-top: 0;
}

.c38:hover .c1 {
  color: #FFFFFF;
}

.c38 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c38 .c1 svg {
  margin-top: 0;
}

.c39:hover .c1 {
  color: #FFFFFF;
}

.c39 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c39 .c1 svg {
  margin-top: 0;
}

.c40:hover .c1 {
  color: #FFFFFF;
}

.c40 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c40 .c1 svg {
  margin-top: 0;
}

.c41:hover .c1 {
  color: #FFFFFF;
}

.c41 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c41 .c1 svg {
  margin-top: 0;
}

.c42:hover .c1 {
  color: #FFFFFF;
}

.c42 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c42 .c1 svg {
  margin-top: 0;
}

.c43:hover .c1 {
  color: #FFFFFF;
}

.c43 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c43 .c1 svg {
  margin-top: 0;
}

.c44:hover .c1 {
  color: #FFFFFF;
}

.c44 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c44 .c1 svg {
  margin-top: 0;
}

.c45:hover .c1 {
  color: #FFFFFF;
}

.c45 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c45 .c1 svg {
  margin-top: 0;
}

.c46:hover .c1 {
  color: #FFFFFF;
}

.c46 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  margin-bottom: 0px;
  height: 16px;
}

.c46 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
  data-component="button"
  disabled={false}
  draggable={false}
  role="button"
  size="medium"
  type="button"
>
  <span
    className="c1 c2"
    color="#008200"
    data-component="icon"
    data-element="filter"
    disabled={false}
    fontSize="small"
    type="filter"
  />
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
</button>
`;
